# ouster-rs-ce

./: .gitignore  Cargo.toml  README.md
src/: aggregator.rs  cartesian_iterator.rs  config.rs  iterator.rs  lib.rs  mode.rs  packet.rs  pixel_position_iterator.rs  profile.rs
src/config/: config_params.rs  lidar_profile.rs  mod.rs
src/config/beam_intrinsics/: mod.rs
src/config/config_params/: azimuth_window.rs  mod.rs  signal_multiplier.rs
src/config/lidar_data_format/: mod.rs  valid_window.rs
src/profile/: dual.rs  dual_low.rs  low.rs  mod.rs  single.rs
tests/: process_pcap.rs
