[package]
name = "ouster-rs-ce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { version = "1.0.196", features = ["derive"] }
log = "0.4"
bytemuck = {version = "1", features = ["derive", "min_const_generics"] }

[dev-dependencies]
serde_json = "1.0.113"
pcap = "1.1.0"
pcd-rs = { version = "0.10.0", features = ["derive"] }
image = {version = "0.24", features = ["png"]}
imageproc = "0.23.0"
